tests/negative/neg_pr113_variant_multi_choice.safe
package neg_pr113_variant_multi_choice
   type packet (kind : character = 'A') is
      record
         case kind
            when 'A', 'B'
               value : integer;



